<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iyzico_fragment_secondary_login_top_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <com.android.iyzicosdk.ui.components.IyziCoCustomNestedScroolView
        android:id="@+id/iyzicoNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:overScrollMode="ifContentScrolls"
        app:iyziCo_hide="true"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/iyzico_primary_margin"
            android:layout_marginTop="@dimen/iyzico_secondary_margin"
            android:layout_marginEnd="@dimen/iyzico_primary_margin"
            android:orientation="vertical">


                <com.android.iyzicosdk.ui.components.edit_text.IyziCoPrimaryEditText
                    android:id="@+id/iyzico_fragment_secondary_login_email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:inputType="textEmailAddress"
                    app:iyzico_headText="@string/iyzico_fragment_email_email" />



            <com.android.iyzicosdk.ui.components.edit_text.IyziCoPhoneEditText
                android:id="@+id/iyzico_fragment_secondary_login_phone_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:iyzico_headText="@string/iyzico_fragment_email_email"
                app:iyzico_hintText="@string/iyzico_fragment_email_write_email" />

            <com.android.iyzicosdk.ui.components.IyziCoCustomContractRadioItem
                android:id="@+id/iyzico_communication_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                app:iyzico_end_text="@string/iyzico_read_and_except"
                app:iyzico_start_text="@string/iyzico_communication_permission"
                app:layout_constraintTop_toBottomOf="@+id/iyzico_fragment_secondary_login_phone_editText" />

            <com.android.iyzicosdk.ui.components.IyziCoCustomContractRadioItem
                android:id="@+id/iyzico_kvkk_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                app:iyzico_end_text="@string/iyzico_read_and_except"
                app:iyzico_start_text="@string/iyzico_KVKK_open_consent_text"
                app:layout_constraintTop_toBottomOf="@+id/iyzico_communication_permission" />

            <com.android.iyzicosdk.ui.components.IyziCoCustomContractRadioItem
                android:id="@+id/iyzico_user_aggrement_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                app:iyzico_end_text="@string/iyzico_read_and_except"
                app:iyzico_start_text="@string/iyzico_user_aggrement"
                app:layout_constraintTop_toBottomOf="@+id/iyzico_kvkk_permission" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/fragment_secondary_login_warning_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/iyzico_ic_error"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/iyzico_secondary_login_error_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/markpromedium"
                    android:text="@string/iyzico_secondary_login_error_text"
                    android:textColor="@color/iyzico_red"
                    android:textSize="12dp"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </LinearLayout>

        </LinearLayout>
    </com.android.iyzicosdk.ui.components.IyziCoCustomNestedScroolView>

    <com.android.iyzicosdk.ui.components.buttons.IyziCoCustomButton
        android:id="@+id/iyzico_secondary_login_fragment_contunie_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iyzico_button_height"
        android:layout_gravity="bottom"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="54dp"
        android:text="@string/iyzico_common_contunie"
        android:visibility="visible"
        app:iyzico_buttonType="BLUE_FILL"
        app:iyzico_sticky="1"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

